style.css
* {
    margin: 0;
    padding: 0;
    font-family: 'Press Start 2P', cursive;
}

html {
    /* animation: day-night 5s; */
    margin-top: 0;
    text-align: center;
    /* Day */
    /* background-color: #0099db; */
    /* Night */
    /* background-color: #15141a; */
    color: #FAFAFA;
    font-family: Arial, Helvetica, sans-serif;
    height: 100%;
    /* animation: dayNight 10s infinite alternate; */
}



.day-sky {
    background-color: #0099db;
    transition: background-color 5s;
}

.night-sky {
    background-color: #19162b;
    transition: background-color 5s;
}



body {
    height: 100%;
    overflow: hidden;
}

.score {
    padding-top: 40px;
}

#background-img {
    margin-top: 0;
    transform: translateX(-50%);
    width: 100%;
    height: 100%;
    z-index: -1;
    position: absolute;
    object-fit: cover;
}

#stars-img {
    margin-top: 0;
    transform: translateX(-50%);
    width: 100%;
    height: 100%;
    z-index: -2;
    position: absolute;
    object-fit: cover;
}

.day-stars {
    opacity: 0;
    transition: opacity 5s;
}

.night-stars {
    opacity: 0.5;
    transition: opacity 5s;
}

/* @keyframes stars {
    from {
        opacity: 0;
    }

    50% {
        opacity: 0;
    }

    to {
        opacity: 0.6;
    }
}

@keyframes dayNight {
    from {
        background-color: #0099db;
    }

    to {
        background-color: #15141a;
    }
} */

.main-container {
    height: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.balloon-container {
    display: flex;
    align-self: center;
    align-items: center;
    height: 100%;
}

.balloon {
    height: 80%;
    width: 360px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    background-image: url('./img/Balloon1.png');
}

.balloon-popped {
    height: 80%;
    width: 360px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: contain;
    background-image: url('./img/Balloon2.png');
}

.shop-container {
    width: fit-content;
    margin: 0 auto;
    padding: 0 10px;
    border-radius: 20px;
    color: #573420;
    background-color: rgba(164, 101, 60, 0.80);
    border: solid 5px;
    height: 332px;
    margin-bottom: 10px;
}

.shop-listing-container {
    overflow-y: auto;
    height: 254px;
}

.shop-listing p:nth-child(3) {
    display: none;
}

.shop-listing .num-poppers {
    margin-left: 0;
}

.title {
    margin: 15px 0;
    padding: 0 80px;
    font-size: 24px;
    color: #FAFAFA;
}

.upgrade-cost {
    margin-left: 15px;
    margin-right: 5px;
}

.shop-listing {
    height: 48px;
    max-width: 600px;
    /* justify-content: center; */
    margin: 10px 0;
    padding: 10px;
    display: flex;
    align-items: center;
    color: #FAFAFA;
    background-color: rgba(203, 157, 97, 0.70);
    border-radius: 20px;
}

.shop-listing p {
    margin-left: auto;
}

/* .shop-listing:not(:nth-child(2)) .upgrade-cost {
    margin-left: 30px;
} */

.shop-listing:hover {
    background-color: rgb(203, 157, 97);
}

.shop-listing:active {
    background-color: rgb(160, 122, 73);
}

.hide {
    display: none;
}

.line-through {
    /* text-decoration: line-through; */
    background-color: rgba(184, 161, 131, 0.7);
}

.line-through:hover {
    background-color: rgba(184, 161, 131, 0.7);
}

.line-through:active {
    background-color: rgba(184, 161, 131, 0.7);
}

.main-button {
    width: 200px;
    height: 200px;
    border-radius: 50%;
    background-color: #FF7E67;
    border-color: #d14d36;
    color: #FAFAFA;
    font-weight: bold;
    font-size: 40px;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.29);
    transition: .15s;
    text-decoration: none;
}

.main-button:hover{
    background-color: #e45c44;
}

.main-button:active{
    background-color: #d14d36;
}


/* -------- SCROLL BAR STYLING -------- */

/* width */
::-webkit-scrollbar {
    width: 8px;
  }
  
  /* Track */
  ::-webkit-scrollbar-track {
    background: #573420
  }
  
  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: rgba(203, 157, 97, 0.70);
  }
  
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555;
  }




  /* ------------ Cloud animation ------------ */

.clouds {
    position: absolute;
    z-index: -1;
}

/* .cloud img{
    width: 50%;
} */


@-webkit-keyframes animateCloud {
    0% {
        margin-left: -1000px;
    }
    100% {
        margin-left: 100%;
    }
}

@-moz-keyframes animateCloud {
    0% {
        margin-left: -1000px;
    }
    100% {
        margin-left: 100%;
    }
}

@keyframes animateCloud {
    0% {
        margin-left: -1000px;
    }
    100% {
        margin-left: 100%;
    }
}



.cloud-1{
	-webkit-animation: animateCloud 65s linear infinite;
	-moz-animation: animateCloud 65s linear infinite;
	animation: animateCloud 65s linear infinite;

    margin-top: 100px;

    -webkit-transform: scale(0.65);
	-moz-transform: scale(0.65);
	transform: scale(0.65);
}

.cloud-2 {
	-webkit-animation: animateCloud 40s linear infinite;
	-moz-animation: animateCloud 40s linear infinite;
	animation: animateCloud 40s linear infinite;

    margin-top: 300px;
	
	-webkit-transform: scale(0.3);
	-moz-transform: scale(0.3);
	transform: scale(0.3);
}

.cloud-3 {
	-webkit-animation: animateCloud 60s linear infinite;
	-moz-animation: animateCloud 60s linear infinite;
	animation: animateCloud 60s linear infinite;

    margin-top: 675px;
	
	-webkit-transform: scale(0.5);
	-moz-transform: scale(0.5);
	transform: scale(0.5);
}

.cloud-4 {
	-webkit-animation: animateCloud 48s linear infinite;
	-moz-animation: animateCloud 48s linear infinite;
	animation: animateCloud 48s linear infinite;
	
    margin-top: 400px;

	-webkit-transform: scale(0.4);
	-moz-transform: scale(0.4);
	transform: scale(0.4);
}

.cloud-5 {
	-webkit-animation: animateCloud 25s linear infinite;
	-moz-animation: animateCloud 25s linear infinite;
	animation: animateCloud 25s linear infinite;

    margin-top: 525px;
	
	-webkit-transform: scale(0.55);
	-moz-transform: scale(0.55);
	transform: scale(0.55);
}

